--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <header class="row justify-content-around">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </header>
+    </div>
 
 </body>
 
