--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 
 <body>
     <div class="container-fluid">
-        <header class="row justify-content-around">
-            <div class="col-4"></div>
-            <div class="col-4">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+        <header class="row justify-content-between">
+            <div class="square col-4"></div>
+            <div class="square col-4">
+                <!-- <i class="bi bi-list"></i>
+                <div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div> -->
             </div>
         </header>
     </div>
