--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <header class="row justify-content-between">
             <div class="square col-4"></div>
             <div class="square col-4">
@@ -26,6 +26,14 @@
                 </div> -->
             </div>
         </header>
+        <div class="row justify-content-center jumbotron">
+            <div class="square col-10">
+                <!-- <img src="" alt="">
+                <h1></h1>
+                <img src="" alt="">
+                <p></p> -->
+            </div>
+        </div>
     </div>
 
 </body>
