--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                 <p></p> -->
             </div>
         </div>
+        <!-- Portfolio -->
+        <div class="row justify-content-center">
+            <h2 class=" square text-center col-10">Portfolio</h2>
+            <img class=" square col-10" src="" alt="">
+            <div class=" square-big col-10"></div>
+            <div class=" square-big col-10"></div>
+            <div class=" square-big col-10"></div>
+            <div class=" square-big col-10"></div>
+            <div class=" square-big col-10"></div>
+            <div class=" square-big col-10"></div>
+        </div>
     </div>
 
 </body>
