add about section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div> -->
             </div>
         </header>
-        <div class="row justify-content-center jumbotron">
+        <div class="row justify-content-center jumbotron bkg-color-green">
             <div class="square col-10">
                 <!-- <img src="" alt="">
                 <h1></h1>
@@ -35,8 +35,8 @@
             </div>
         </div>
         <!-- Portfolio -->
-        <div class="row justify-content-center">
-            <h2 class=" square text-center col-10">Portfolio</h2>
+        <div class="row justify-content-center text-center">
+            <h2 class=" square col-10">Portfolio</h2>
             <img class=" square col-10" src="" alt="">
             <div class=" square-big col-10"></div>
             <div class=" square-big col-10"></div>
@@ -44,6 +44,14 @@
             <div class=" square-big col-10"></div>
             <div class=" square-big col-10"></div>
             <div class=" square-big col-10"></div>
+        </div>
+        <!-- About section -->
+        <div class="row justify-content-center text-center bkg-color-green">
+            <h2 class="square col-10">About</h2>
+            <img class=" square col-10" src="" alt="">
+            <div class=" square-big col-10"> primo paragrafo</div>
+            <div class=" square-big col-10"> secondo paragrafo</div>
+            <div class=" square col-4"> Download</div>
         </div>
     </div>
 
