--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+o
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,7 +37,7 @@
         </div>
         <!-- Portfolio -->
         <div class="row justify-content-center text-center">
-            <h2 class=" square col-10">Portfolio</h2>
+            <h2 class=" square col-10">PORTFOLIO</h2>
             <img class=" square col-10" src="" alt="">
             <div class=" square-big col-10"></div>
             <div class=" square-big col-10"></div>
@@ -47,11 +48,26 @@
         </div>
         <!-- About section -->
         <div class="row justify-content-center text-center bkg-color-green">
-            <h2 class="square col-10">About</h2>
+            <h2 class="square col-10">ABOUT</h2>
             <img class=" square col-10" src="" alt="">
             <div class=" square-big col-10"> primo paragrafo</div>
             <div class=" square-big col-10"> secondo paragrafo</div>
             <div class=" square col-4"> Download</div>
+        </div>
+        <!-- Contact-me section -->
+        <div class="row justify-content-center">
+            <h2 class="square col-10 text-center">CONTACT ME</h2>
+            <img class=" square col-10" src="" alt="">
+            <div class=" square col-10">Name</div>
+            <hr>
+            <div class=" square col-10">Email Address</div>
+            <hr>
+            <div class=" square col-10">Phone Number</div>
+            <hr>
+            <div class=" square col-10">Message</div>
+            <!-- space -->
+            <hr>
+            <div class=" square col-10">Send</div>
         </div>
     </div>
 
