--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@ o
             <hr>
             <div class=" square col-10">Send</div>
         </div>
+        <!-- pre-footer section -->
+        <div class="row justify-content-center text-center pre-footer">
+            <div class=" square col-10">Location 2215 John Daniel Drive ClarK, MO 54243</div>
+            <div class=" square col-10">
+                <div>Arond the web</div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class=" square col-10">
+                <div>ABOUT FREELANCER</div>
+                <p>Freelancer is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+            </div>
+        </div>
+        <footer class="text-center">Copyright by Your Website 2019</footer>
     </div>
 
 </body>
