--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="row justify-content-center text-center bkg-color-green">
             <h2 class="square col-10">ABOUT</h2>
             <img class=" square col-10" src="" alt="">
-            <div class=" square-big col-10"> primo paragrafo</div>
-            <div class=" square-big col-10"> secondo paragrafo</div>
+            <div class=" square-big col-10 col-md-5"> primo paragrafo</div>
+            <div class=" square-big col-10 col-md-5"> secondo paragrafo</div>
             <div class=" square col-4"> Download</div>
         </div>
         <!-- Contact-me section -->
