--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div class="row justify-content-center text-center">
             <h2 class=" square col-10">PORTFOLIO</h2>
             <img class=" square col-10" src="" alt="">
-            <div class=" square-big col-10 col-md-5"></div>
-            <div class=" square-big col-10 col-md-5"></div>
-            <div class=" square-big col-10 col-md-5"></div>
-            <div class=" square-big col-10 col-md-5"></div>
-            <div class=" square-big col-10 col-md-5"></div>
-            <div class=" square-big col-10 col-md-5"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
         </div>
         <!-- About section -->
         <div class="row justify-content-center text-center bkg-color-green">
