--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <header class="row justify-content-between">
+        <header class="row justify-content-around">
             <div class="square col-4"></div>
             <div class="square col-4">
                 <!-- <i class="bi bi-list"></i>
@@ -57,15 +57,19 @@
         <div class="row justify-content-center">
             <h2 class="square col-10 text-center">CONTACT ME</h2>
             <img class=" square col-10" src="" alt="">
-            <div class=" square col-10">Name</div>
-            <hr>
-            <div class=" square col-10">Email Address</div>
-            <hr>
-            <div class=" square col-10">Phone Number</div>
-            <hr>
-            <div class=" square col-10">Message</div>
+            <div class=" square col-10">Name
+                <hr>
+            </div>
+            <div class=" square col-10">Email Address
+                <hr>
+            </div>
+            <div class=" square col-10">Phone Number
+                <hr>
+            </div>
+            <div class=" square col-10">Message
+                <hr>
+            </div>
             <!-- space -->
-            <hr>
             <div class=" square col-10">Send</div>
         </div>
         <!-- pre-footer section -->
@@ -83,8 +87,10 @@
                 <p>Freelancer is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span>.</p>
             </div>
         </div>
+        <footer class="row justify-content-center text-center">
+            <div class="col-12">Copyright by Your Website 2019</div>
+        </footer>
     </div>
-    <footer class="text-center">Copyright by Your Website 2019</footer>
 </body>
 
 </html>
