--- a/index.html
+++ b/index.html
@@ -14,17 +14,28 @@
 <body>
     <div class="container">
         <header class="row justify-content-around">
-            <div class="square col-4"></div>
-            <div class="square col-4">
-                <!-- <i class="bi bi-list"></i>
-                <div>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div> -->
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-light bkg-color-blue">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">PORTFOLIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">ABOUT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">CONTACT ME</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
         <div class="row justify-content-center jumbotron bkg-color-green">
             <div class="square col-10">
