add avatar section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <nav class="navbar navbar-expand-lg navbar-light bkg-color-blue">
                 <div class="container-fluid">
                     <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler border-1 text-white" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
@@ -38,11 +39,27 @@
             </nav>
         </header>
         <div class="row justify-content-center jumbotron bkg-color-green">
-            <div class="square col-10">
-                <!-- <img src="" alt="">
-                <h1></h1>
-                <img src="" alt="">
-                <p></p> -->
+            <div class="square col-12">
+                <div class="card border-0 text-center bkg-color-green">
+                    <img src="./img/avatar.svg" class="card-img-top bkg-color-green" id="avatar" alt="...">
+                    <div class="card-body bkg-color-green text-white">
+                        <h5 class="card-title text-white">START BOOTSTRAP</h5>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-dash-lg" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-star-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-dash-lg" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                        </svg>
+                        <p class="card-text text-white">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Portfolio -->
