--- a/index.html
+++ b/index.html
@@ -44,19 +44,23 @@
                     <img src="./img/avatar.svg" class="card-img-top bkg-color-green" id="avatar" alt="...">
                     <div class="card-body bkg-color-green text-white">
                         <h5 class="card-title text-white">START BOOTSTRAP</h5>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-dash-lg" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                            class="bi bi-star-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-dash-lg" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
-                        </svg>
+                        <div class="spacing-bottom-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-dash-lg" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-star-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-dash-lg" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                            </svg>
+                        </div>
                         <p class="card-text text-white">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                     </div>
                 </div>
@@ -64,19 +68,60 @@
         </div>
         <!-- Portfolio -->
         <div class="row justify-content-center text-center">
-            <h2 class=" square col-10">PORTFOLIO</h2>
+            <h2 class=" square col-10 spacing-top-30">PORTFOLIO</h2>
+            <div class=" col-10">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                    class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                </svg>
+            </div>
             <img class=" square col-10" src="" alt="">
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
-            <div class=" square-big col-10 col-md-5 col-lg-4"></div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/cabin.png" id="img-contain" alt="">
+            </div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/cake.png" id="img-contain" alt="">
+            </div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/circus.png" id="img-contain" alt="">
+            </div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/game.png" id="img-contain" alt="">
+            </div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/safe.png" id="img-contain" alt="">
+            </div>
+            <div class=" square-big col-10 col-md-5 col-lg-4">
+                <img src="./img/submarine.png" id="img-contain" alt="">
+            </div>
         </div>
         <!-- About section -->
-        <div class="row justify-content-center text-center bkg-color-green">
-            <h2 class="square col-10">ABOUT</h2>
-            <img class=" square col-10" src="" alt="">
+        <div class="row justify-content-center text-center text-white bkg-color-green">
+            <h2 class="square col-10 spacing-top-50 spacing-bottom-10">ABOUT</h2>
+            <div class=" col-10 spacing-bottom-10 spacing-bottom-10">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                    class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                </svg>
+            </div>
             <div class=" square-big col-10 col-md-5"> primo paragrafo</div>
             <div class=" square-big col-10 col-md-5"> secondo paragrafo</div>
             <div class=" square col-4"> Download</div>
