--- a/index.html
+++ b/index.html
@@ -122,9 +122,22 @@
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
                 </svg>
             </div>
-            <div class=" square-big col-10 col-md-5"> primo paragrafo</div>
-            <div class=" square-big col-10 col-md-5"> secondo paragrafo</div>
-            <div class=" square col-4"> Download</div>
+            <p class=" square-big col-10 col-md-5 fw-bold"> Freelancer is a free bootstrap theme created by Start
+                Bootstrap.
+                The download includes the complete source files including HTML, CSS, and JavaScript as well as optional
+                LESS stylesheets for easy customization.</p>
+            <p class=" square-big col-10 col-md-5 fw-bold"> Whether you're a student looking to showcase your work, a
+                professional looking to attract clients, or a graphic artist looking to share your projects, this
+                template is the perfect starting point!</p>
+            <div class=" square col-4">
+                <button type="button" class="btn btn-outline-light"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                        height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                        <path
+                            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                        <path
+                            d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
+                    </svg> Download</button>
+            </div>
         </div>
         <!-- Contact-me section -->
         <div class="row justify-content-center">
