--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <header class="row justify-content-around">
             <nav class="navbar navbar-expand-lg navbar-light bkg-color-blue">
                 <div class="container-fluid">
