--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             <p class=" square-big col-10 col-md-5 fw-bold"> Whether you're a student looking to showcase your work, a
                 professional looking to attract clients, or a graphic artist looking to share your projects, this
                 template is the perfect starting point!</p>
-            <div class=" square col-4">
-                <button type="button" class="btn btn-outline-light"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                        height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+            <div class=" square col-4 spacing-top-30 spacing-bottom-30">
+                <button type="button" class="btn btn-outline-light fw-bold"> <svg xmlns="http://www.w3.org/2000/svg"
+                        width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                         <path
                             d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
                         <path
