--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                     <label for="Message" class="form-label">Message</label>
                     <input type="text" class="form-control" id="Message" name="Message">
                 </div>
-                <button type="button" class="btn bkg-color-green text-white">Primary</button>
+                <button type="button" class="btn bkg-color-green text-white">Send</button>
             </form>
         </div>
         <!-- pre-footer section -->
-        <div class="row justify-content-center text-center pre-footer">
+        <div class="row justify-content-center text-center pre-footer text-white spacing-top-30">
             <div class=" square col-10 col-md-4">Location 2215 John Daniel Drive ClarK, MO 54243</div>
             <div class=" square col-10 col-md-4">
                 <div>Arond the web</div>
@@ -178,7 +178,7 @@
                 <p>Freelancer is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span>.</p>
             </div>
         </div>
-        <footer class="row justify-content-center text-center">
+        <footer class="row justify-content-center text-center text-white">
             <div class="col-12">Copyright by Your Website 2019</div>
         </footer>
     </div>
