--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <header class="row justify-content-around">
-            <nav class="navbar navbar-expand-lg navbar-light bkg-color-blue">
+            <nav class="navbar navbar-expand-lg navbar-dark bkg-color-blue">
                 <div class="container-fluid">
                     <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
                     <button class="navbar-toggler border-1 text-white" type="button" data-bs-toggle="collapse"
